fixing stretched image

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -369,9 +369,10 @@ nav {
           /* Small devices (landscape phones: 575px) */
           @media (max-width: $phone-max) {
             width: 100%;
-            height: auto;
+            height: 100%;
             padding: 0 0 1rem 0;
             /* object-fit: cover; */
+            overflow: hidden;
           }
         }
 
